# tomat

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  install.sh
src/: args.rs  bar.rs  lib.rs  main.rs  storage.rs  timer.rs  tomat.rs  types.rs  util.rs
src/commands/: start.rs  stat.rs
src/lib/commands/: mod.rs  start.rs  stat.rs
src/lib/system/: args.rs  storage.rs  tools.rs  util.rs
src/system/: args.rs  mod.rs  storage.rs  string.rs  tools.rs  util.rs
tests/: args.rs  integration_storage.rs
