[package]
name = "tomat"
version = "0.1.0"
authors = ["Aydogan Ersoz <aydoganersoz@protonmail.com>"]
edition = "2018"
description = "Minimal pomodoro timer"
license = "MIT"
keywords = ["pomodoro", "timer"]
repository = "https://github.com/aydoganersoz/tomat"
documentation = "https://github.com/aydoganersoz/tomat/wiki"
readme = "https://github.com/aydoganersoz/tomat/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
timer = "0.2.0"
chrono = "0.4.11"
indicatif = "0.14.0"
rusqlite = "0.21.0"
ctrlc = "3.1.4"
rodio = "0.11.0"
time = "0.1.37"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
dialoguer = "0.5.0"